# PickPal

./: .env  README.md  pickpal-complete.tar  requirements.txt  vercel.json
backend/: README.md  claude_service.py  config.py  fetchai_gateway.py  main.py  orchestrator.py
backend/agents/: base_agent.py  discovery_agent.py  (+4 more)
pickpal-complete/: README.md
pickpal-complete/backend/: .env.example  LIVE_PLAN.md  pyproject.toml  requirements.txt  search_history.db
pickpal-complete/backend/app/: main.py
pickpal-complete/backend/demo/: demo_scenarios.md
pickpal-complete/backend/src/clarifier/: agent.py
pickpal-complete/backend/src/common/: aspects.py  bus.py  messages.py  scoring.py  utils.py
pickpal-complete/backend/src/common/data/: gaming_laptop.txt  noise_canceling_headphones.txt  standing_desk.txt  wireless_earbuds.txt
pickpal-complete/backend/src/common/mocks/: reviews_desks.json  reviews_earbuds.json
pickpal-complete/backend/src/discovery/: adapters.py  agent.py  gemini_adapter.py  helpers.py  simple_gemini.py
pickpal-complete/backend/src/normalizer/: agent.py
pickpal-complete/backend/src/planner/: agent.py
pickpal-complete/backend/src/ranker/: agent.py
pickpal-complete/backend/src/verifier/: agent.py
pickpal-complete/backend/uagents_example/: README.md  agentverse_README.md  agentverse_config.py  agentverse_deployment.py  agentverse_discovery.py  agentverse_planner.py  client_example.py  deployment_guide.md  discovery_uagent.py  fetch_network_setup.py  free_endpoint_guide.md  network_examples.py  ngrok_setup.py  planner_uagent.py  requirements.txt
(+7 files in other folders)
